--- a/html-files/about.html
+++ b/html-files/about.html
@@ -374,7 +374,7 @@
             <p></p>
         </div>
         <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="col">
+            <div class="col-sm-12 col-md-6 col-lg-4">
                 <div class="card h-100">
                     <img src="../testimonialpdf/sgc.png" class="card-img-top testimonial"  alt="Preview of Testimonial 1">
                     <div class="card-body">
@@ -403,7 +403,7 @@
                 </div>
             </div>
 
-            <div class="col">
+            <div class="col-sm-12 col-md-6 col-lg-4">
                 <div class="card h-100">
                     <img src="../testimonialpdf/test1.png" class="card-img-top testimonial"  alt="Preview of Testimonial 2">
                     <div class="card-body">
@@ -431,7 +431,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-sm-12 col-md-6 col-lg-4">
                 <div class="card h-100">
                     <img src="../testimonialpdf/test2.png" class="card-img-top testimonial" alt="Preview of Testimonial 3">
                     <div class="card-body">
@@ -459,7 +459,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-sm-12 col-md-6 col-lg-4">
                 <div class="card h-100">
                     <img src="../testimonialpdf/test3.png"  class="card-img-top testimonial" alt="Preview of Testimonial 4">
                     <div class="card-body">
