--- a/html-files/index.html
+++ b/html-files/index.html
@@ -291,7 +291,7 @@
 
     <div class=" row">
 <!--4 spinning card element ,appear all 4 in extralarge screen,2 in medium ,1 in small screen-->
-    <div class="catt offset-sm-2 offset-md-0 col-lg-4 col-md-6 col-sm-8 col-xl-3">
+    <div class="catt col-lg-4 col-md-6 col-sm-12 col-xl-3">
  <!--Card 1 (on hover flip to backside-->
     <div class="card" id='card1' style="width:20rem;height:25rem;" >
       <div id="card1font">
@@ -315,7 +315,7 @@
         </div>
     </div>
         </div>
-        <div class="catt offset-sm-2 offset-md-0 col-sm-8 col-md-6  col-lg-4 col-xl-3" >
+        <div class="catt col-lg-4 col-md-6 col-sm-12 col-xl-3" >
             <!--Card 2 (on hover flip to backside-->
             <div class="card " id="card3" style="width:20rem;height:25rem;">
           <div id="card3font">
@@ -337,7 +337,7 @@
         </div>
             </div>
 
-        <div class="catt offset-sm-2 offset-md-0 col-sm-8 col-md-6  col-lg-4 col-xl-3" >
+        <div class="catt col-lg-4 col-md-6 col-sm-12 col-xl-3" >
             <!--Card 3 (on hover flip to backside)-->
             <div class="card" id="card2" style="width:20rem;height:25rem;">
                <div id="card2font">
@@ -362,7 +362,7 @@
 
             </div>
 
-        <div class="catt offset-sm-2 offset-md-0 col-sm-8 col-md-6  col-lg-4 col-xl-3" >
+        <div class="catt col-lg-4 col-md-6 col-sm-12 col-xl-3" >
             <!--Card 4 (on hover flip to backside-->
             <div class="card" id='card4' style="width:20rem;height:25rem;">
              <div id="card4font">
