--- a/html-files/about.html
+++ b/html-files/about.html
@@ -376,7 +376,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col-sm-12 col-md-6 col-lg-4">
                 <div class="card h-100">
-                    <img src="../testimonialpdf/sgc.png" class="card-img-top testimonial"  alt="Preview of Testimonial 1">
+                    <img src="../testimonialpdf/testimonial0preview.png" class="card-img-top testimonial"  alt="Preview of Testimonial 1">
                     <div class="card-body">
                         <h5 class="card-title">Testimonial 1</h5>
                         <p class="card-text">Written by Dunearn Secondary School</p>
@@ -405,7 +405,7 @@
 
             <div class="col-sm-12 col-md-6 col-lg-4">
                 <div class="card h-100">
-                    <img src="../testimonialpdf/test1.png" class="card-img-top testimonial"  alt="Preview of Testimonial 2">
+                    <img src="../testimonialpdf/testimonial1preview.png" class="card-img-top testimonial"  alt="Preview of Testimonial 2">
                     <div class="card-body">
                         <h5 class="card-title">Testimonial 2</h5>
                         <p class="card-text">Written by Ms Sarah Chan</p>
@@ -433,7 +433,7 @@
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4">
                 <div class="card h-100">
-                    <img src="../testimonialpdf/test2.png" class="card-img-top testimonial" alt="Preview of Testimonial 3">
+                    <img src="../testimonialpdf/testimonial2preview.png" class="card-img-top testimonial" alt="Preview of Testimonial 3">
                     <div class="card-body">
                         <h5 class="card-title">Testimonial 3</h5>
                         <p class="card-text">Written by Ms Chua Sock Sian</p>
@@ -461,7 +461,7 @@
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4">
                 <div class="card h-100">
-                    <img src="../testimonialpdf/test3.png"  class="card-img-top testimonial" alt="Preview of Testimonial 4">
+                    <img src="../testimonialpdf/testimonial3preview.png"  class="card-img-top testimonial" alt="Preview of Testimonial 4">
                     <div class="card-body">
                         <h5 class="card-title">Testimonial 4</h5>
                         <p class="card-text">Written by Mr Lee Kong Huat</p>
